ft_printf changes V1

--- a/printf/Makefile
+++ b/printf/Makefile
@@ -6,30 +6,17 @@
 #    By: tompedra <tompedra@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/25 19:48:35 by tompedra          #+#    #+#              #
-#    Updated: 2022/04/25 20:22:36 by tompedra         ###   ########.fr        #
+#    Updated: 2022/05/13 23:14:29 by tompedra         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c\
-       ft_isascii.c ft_isprint.c ft_strlen.c\
-	   ft_memset.c ft_bzero.c ft_memcpy.c\
-	   ft_memmove.c ft_strlcpy.c ft_strlcat.c\
-	   ft_toupper.c ft_tolower.c ft_strchr.c\
-	   ft_strrchr.c ft_strncmp.c ft_memchr.c\
-	   ft_memcmp.c ft_strnstr.c ft_atoi.c\
-	   ft_calloc.c ft_strdup.c\
-	   ft_substr.c ft_strjoin.c ft_strtrim.c\
-	   ft_split.c ft_itoa.c ft_strmapi.c\
-	   ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c\
-	   ft_putendl_fd.c ft_putnbr_fd.c
+M_SRCS = ft_printf.c ft_printf_param_type.c
 
-B_SRCS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c\
-		 ft_lstlast_bonus.c ft_lstadd_back_bonus.c ft_lstdelone_bonus.c\
-		 ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
+B_SRCS = ft_printf_bonus.c ft_printf_param_bonus_bonus.c
 
-OBJS = $(SRCS:.c=.o)
+M_OBJS = $(M_SRCS:.c=.o)
 
-B_OBJS = $(OBJS) $(B_SRCS:.c=.o)
+B_OBJS = $(B_SRCS:.c=.o)
 
 LIBFT_ROUTE = libft/
 
@@ -56,11 +43,13 @@ TOUCH = touch
 $(NAME):	$(M_NAME)
 
 $(M_NAME):	$(OBJS)
+		make -C $(LIBFT_ROUTE)
 		$(AR) $(LIBNAME) $(OBJS)
 		$(RM) $(B_NAME)
 		$(TOUCH) $(M_NAME)
 
 $(B_NAME):	$(B_OBJS)
+		make bonus -C $(LIBFT_ROUTE)
 		$(AR) $(LIBNAME) $(B_OBJS)
 		$(RM) $(M_NAME)
 		$(TOUCH) $(B_NAME)
@@ -68,9 +57,11 @@ $(B_NAME):	$(B_OBJS)
 all:		$(M_NAME)
 
 clean:
-		$(RM) $(B_OBJS)
+		make clean -C $(LIBFT_ROUTE)
+		$(RM) $(M_OBJS) $(B_OBJS)
 
 fclean:		clean
+		$(RM) $(LIBFT_ROUTE)$(LIBFT_LIBNAME) $(LIBFT_ROUTE)$(M_NAME) $(LIBFT_ROUTE)$(B_NAME)
 		$(RM) $(LIBNAME) $(M_NAME) $(B_NAME)
 
 re:			fclean all
